modified:   README.me

--- a/README.me
+++ b/README.me
@@ -70,7 +70,7 @@ You don’t need to install or configure Playwright on your local system to run 
 
    * Navigate to your repository on GitHub.
    * Click the **Actions** tab.
-   * Select the **Playwright Tests** workflow from the sidebar.
+   * Select the **Playwright JS Challange Tests** workflow from the sidebar.
    * At the top of the workflow page, click **Run workflow**, choose the branch (e.g., `main`), and confirm.
 
 3. **Monitor Execution**
