--- a/README.me
+++ b/README.me
@@ -81,17 +81,5 @@ You don’t need to install or configure Playwright on your local system to run 
 
 ---
 
-## Summary
-
-* **Local Testing:**
-
-  1. Run `npm init playwright@latest`
-  2. Install dependencies (`npm install`)
-  3. Launch tests with `npx playwright test`
-
-* **CI/CD (GitHub Actions):**
-
-  1. Confirm `workflow_dispatch` is configured in `.github/workflows/playwright-tests.yml`
-  2. Go to **Actions → Playwright Tests → Run workflow**
-  3. Download and inspect the generated test report artifact
+Exapmle of generated report of executed tests:
 
