--- a/README.me
+++ b/README.me
@@ -83,4 +83,4 @@ You don’t need to install or configure Playwright on your local system to run 
 
 Exapmle of generated report of executed tests:
 
-![Descriptive alt text](./readme-screenshots/Screenshot 2025-06-03 at 16.07.15.png)
+![Monocart report](./readme-screenshots/Screenshot 2025-06-03 at 16.07.15.png)
